penambahan img 12 juni

--- a/business-location.html
+++ b/business-location.html
@@ -227,16 +227,7 @@
             <div class="half-image">
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/2.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/3.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/4.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/5.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/6.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/7.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/8.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/9.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/10.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/11.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="img/tambahan gambar/icon logo businesse location/bakasi.svg" alt="" /></div>
                 </div>
                 <div class="swiper-button-next swiper-navBtn"></div>
                 <div class="swiper-button-prev swiper-navBtn"></div>
@@ -247,38 +238,29 @@
           <div class="right">
             <h1>Bekasi</h1>
             <p>
-              Our company specializes in providing a wide range of services related to civil structure. From design and engineering to construction and maintenance, we have the expertise and resources to handle any project, big or small.
-              Whether you need a new bridge built, a road repaired, or a building constructed, we have the experience and knowledge to deliver high-quality results. Our team of skilled professionals is committed to meeting the needs of our
-              clients, and we pride ourselves on our attention to detail and dedication to customer satisfaction. If you are in need of reliable and professional civil structure services, look no further than our company.
+              Bekasi is a strategic city located in the province of West Java, Indonesia, and is part of the greater Jakarta metropolitan area. Known as an industrial and commercial hub, Bekasi offers a strategic location and good
+              accessibility to the capital city. With rapidly growing industrial zones, good infrastructure, and a large market potential, Bekasi attracts many companies and investors. The rapid economic growth, abundant workforce, and
+              various facilities and services make Bekasi a promising city for business and investment.
             </p>
           </div>
         </div>
       </div>
-      <div class="ourservice-content2" id="tarahan">
+      <div class="ourservice-content2" id="lampung">
         <div class="content-with-slider">
           <div class="right">
-            <h1>Tarahan</h1>
+            <h1>Lampung</h1>
             <p>
-              Our company specializes in providing a wide range of services related to civil maintenance. Whether you need routine maintenance or emergency repairs, we have the skills and resources to keep your civil structures in top
-              condition. Our team of experienced professionals is trained in all aspects of civil maintenance, including structural repairs, surface repairs, and preventative maintenance. We use only the highest-quality materials and
-              techniques to ensure that your structures are safe and reliable. We understand the importance of timely and efficient maintenance, and we strive to provide our clients with the best possible service. If you are in need of
-              reliable and professional civil maintenance services, look no further than our company.
+              Lampung is a province located on the southern tip of Sumatra island in Indonesia. Its capital city, also named Lampung, is a vibrant urban center and serves as the main gateway to the province. Lampung is known for its natural
+              beauty, boasting stunning landscapes that include pristine beaches, rolling hills, and lush forests. The province is home to the iconic Way Kambas National Park, a renowned conservation area for endangered species, including
+              the Sumatran tiger and elephant. Lampung is also famous for its coffee plantations, producing high-quality robusta and arabica coffee. With its picturesque scenery, diverse wildlife, and coffee culture, Lampung offers a unique
+              blend of nature, adventure, and cultural experiences for visitors to explore.
             </p>
           </div>
           <div class="left">
             <div class="half-image">
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/2.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/3.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/4.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/5.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/6.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/7.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/8.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/9.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/10.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/11.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="img/tambahan gambar/icon logo businesse location/lampung.svg" alt="" /></div>
                 </div>
                 <div class="swiper-button-next swiper-navBtn"></div>
                 <div class="swiper-button-prev swiper-navBtn"></div>
@@ -294,16 +276,7 @@
             <div class="half-image">
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/2.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/3.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/4.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/5.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/6.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/7.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/8.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/9.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/10.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/11.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="img/tambahan gambar/icon logo businesse location/palembang.svg" alt="" /></div>
                 </div>
                 <div class="swiper-button-next swiper-navBtn"></div>
                 <div class="swiper-button-prev swiper-navBtn"></div>
@@ -314,10 +287,10 @@
           <div class="right">
             <h1>Palembang</h1>
             <p>
-              Our company specializes in providing a wide range of services related to steel structure. From design and engineering to construction and maintenance, we have the expertise and resources to handle any project, big or small.
-              Steel structures are strong, durable, and versatile, making them an ideal choice for a variety of applications. Whether you need a steel bridge, a steel building, or any other type of steel structure, we have the experience
-              and knowledge to deliver high-quality results. Our team of skilled professionals is committed to meeting the needs of our clients, and we pride ourselves on our attention to detail and dedication to customer satisfaction. If
-              you are in need of reliable and professional steel structure services, look no further than our company.ssional civil structure services, look no further than our company.
+              Palembang is a city located in South Sumatra, Indonesia. It is the capital and largest city of the province. Known for its rich history and cultural heritage, Palembang offers a blend of traditional and modern elements. The
+              city is famous for its iconic Ampera Bridge, which symbolizes the connection between the two sides of the Musi River. Palembang is also renowned for its traditional culinary delights, such as pempek (fishcake) and tekwan (fish
+              soup). Additionally, the city hosts various cultural events, including the Pempek Festival and the annual Sriwijaya Festival, showcasing the vibrant arts and traditions of the region. With its historical significance, culinary
+              delights, and cultural attractions, Palembang is a captivating destination for visitors and a dynamic city for residents.
             </p>
           </div>
         </div>
@@ -327,26 +300,16 @@
           <div class="right">
             <h1>Jombang</h1>
             <p>
-              Our company specializes in providing a wide range of services related to civil maintenance. Whether you need routine maintenance or emergency repairs, we have the skills and resources to keep your civil structures in top
-              condition. Our team of experienced professionals is trained in all aspects of civil maintenance, including structural repairs, surface repairs, and preventative maintenance. We use only the highest-quality materials and
-              techniques to ensure that your structures are safe and reliable. We understand the importance of timely and efficient maintenance, and we strive to provide our clients with the best possible service. If you are in need of
-              reliable and professional civil maintenance services, look no further than our company.
+              Jombang is a regency located in East Java, Indonesia. It is known for its rich historical and cultural heritage. The regency houses several ancient sites and religious landmarks, including the legendary Tomb of Sunan Bonang, a
+              prominent figure in Islamic history. Jombang is also recognized for its traditional art forms, such as wayang kulit (shadow puppetry) and gamelan music. The regency showcases a blend of Javanese traditions and Islamic
+              influences. With its historical significance, cultural attractions, and warm hospitality, Jombang offers visitors a glimpse into the cultural tapestry of East Java.
             </p>
           </div>
           <div class="left">
             <div class="half-image">
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/2.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/3.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/4.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/5.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/6.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/7.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/8.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/9.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/10.jpg" alt="" /></div>
-                  <div class="swiper-slide"><img src="img/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/11.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="img/tambahan gambar/icon logo businesse location/jombang.svg" alt="" /></div>
                 </div>
                 <div class="swiper-button-next swiper-navBtn"></div>
                 <div class="swiper-button-prev swiper-navBtn"></div>
