--- a/equipment.html
+++ b/equipment.html
@@ -285,6 +285,12 @@
                 <a>Surveyor Tools </a>
               </button>
             </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="pills-Machine-tab" data-bs-toggle="pill" data-bs-target="#pills-Machine" type="button" role="tab" aria-controls="pills-Machine" aria-selected="false">
+                <span><i class="fa-solid fa-screwdriver-wrench"></i></span>
+                <a>Machine Tools</a>
+              </button>
+            </li>
           </ul>
         </div>
 
@@ -435,9 +441,64 @@
                   <img src="img/img/equiment/Power Tools/handrill ryu electric.JPG" alt="" />
                   <h6>handrill ryu electric</h6>
                 </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/power tools/allen spanner 1 set.jpg" alt="" />
+                  <h6>allen spanner</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/power tools/bench vise tekiro.jpg" alt="" />
+                  <h6>bench vise tekiro</h6>
+                </div>
               </div>
-              <div class="image-content" data-aos="fade-up"></div>
-              <div class="image-content" data-aos="fade-up"></div>
+              <div class="image-content" data-aos="fade-up">
+                <div class="image">
+                  <img src="img/tambahan gambar/power tools/Catwalk.jpg" alt="" />
+                  <h6>Catwalk</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/power tools/chisels.jpg" alt="" />
+                  <h6>chisels</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/power tools/colour thickness.jpg" alt="" />
+                  <h6>colour thickness</h6>
+                </div>
+              </div>
+              <div class="image-content" data-aos="fade-up">
+                <div class="image">
+                  <img src="img/tambahan gambar/power tools/combination wrench 1 bpx.jpg" alt="" />
+                  <h6>combination wrench</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/power tools/frame scaffolding.jfif" alt="" />
+                  <h6>frame scaffoldings</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/power tools/Gerinda Makita.JPG" alt="" />
+                  <h6>Gerinda Makita</h6>
+                </div>
+              </div>
+              <div class="image-content" data-aos="fade-up">
+                <div class="image">
+                  <img src="img/tambahan gambar/power tools/gun hilti.JPG" alt="" />
+                  <h6>gun hilti</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/power tools/hammer 10 inch.jpg" alt="" />
+                  <h6>hammer 10 inch</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/power tools/lever block 5ton.jfif" alt="" />
+                  <h6>lever block 5ton</h6>
+                </div>
+              </div>
+              <div class="image-content" data-aos="fade-up">
+                <div class="image">
+                  <img src="img/tambahan gambar/power tools/LPJ Tube.jfif" alt="" />
+                  <h6>LPJ Tube</h6>
+                </div>
+              </div>
+              <!-- <div class="image-content" data-aos="fade-up"></div> -->
             </div>
 
             <!-- electrical tools  -->
@@ -468,7 +529,13 @@
                   <h6>travolas lakoni</h6>
                 </div>
               </div>
-              <div class="image-content" data-aos="fade-up"></div>
+              <div class="image-content" data-aos="fade-up">
+                <div class="image">
+                  <img src="img/tambahan gambar/Electrical Tools/kabel nyyhh.jpg" alt="" />
+                  <h6>kabel nyyhh</h6>
+                </div>
+              </div>
+              <!-- <div class="image-content" data-aos="fade-up"></div> -->
             </div>
 
             <!-- office inventory  -->
@@ -563,6 +630,30 @@
                   <h6>box pannel mini</h6>
                 </div>
               </div>
+              <div class="image-content" data-aos="fade-up">
+                <div class="image">
+                  <img src="img/tambahan gambar/Office Tools/dji mavic 2 pro.webp" alt="" />
+                  <h6>dji mavic 2 pro</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/Office Tools/dji mavic pro.jpg" alt="" />
+                  <h6>dji mavic pro</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/Office Tools/kursi kony.JPG" alt="" />
+                  <h6>kursi kony</h6>
+                </div>
+              </div>
+              <div class="image-content" data-aos="fade-up">
+                <div class="image">
+                  <img src="img/tambahan gambar/Office Tools/lg ac.jpg" alt="" />
+                  <h6>lg ac</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/Office Tools/meja kony.JPG" alt="" />
+                  <h6>meja kony</h6>
+                </div>
+              </div>
               <div class="image-content" data-aos="fade-up"></div>
             </div>
 
@@ -645,7 +736,7 @@
                 </div>
                 <div class="image">
                   <img src="img/img/equiment/Engine/LED 1000watt.jpg" alt="" />
-                  <h6>jet washer matsumoto</h6>
+                  <h6>LED 1000watt</h6>
                 </div>
               </div>
               <div class="image-content" data-aos="fade-up">
@@ -775,30 +866,52 @@
               <div class="content">
                 <h2>Safety Tools</h2>
 
-                <p>Body Harness Gosave, Stick Lamp, Concrete Baricade, Cone Baricade, Ascender Harness (For Life line), K-3 Bag & Accesorist, Glove welder, Helmet Welder</p>
+                <!-- <p>Body Harness Gosave, Stick Lamp, Concrete Baricade, Cone Baricade, Ascender Harness (For Life line), K-3 Bag & Accesorist, Glove welder, Helmet Welder</p> -->
               </div>
               <div class="image-content" data-aos="fade-up">
                 <div class="image">
-                  <img src="img/img/equiment/Transportation/pajero.jpeg" alt="" />
-                  <h6>Pajero</h6>
+                  <img src="img/tambahan gambar/safety tools (gambar yang ada dihapus aja) foto mobil2/Apron Welder.JPG" alt="" />
+                  <h6>Apron Welder</h6>
                 </div>
                 <div class="image">
-                  <img src="img/img/equiment/Transportation/toyota hillux.jpeg" alt="" />
-                  <h6>toyota hillux</h6>
+                  <img src="img/tambahan gambar/safety tools (gambar yang ada dihapus aja) foto mobil2/Body Harness.JPG" alt="" />
+                  <h6>Body Harness</h6>
                 </div>
                 <div class="image">
-                  <img src="img/img/equiment/Transportation/truck canter 110.png" alt="" />
-                  <h6>truck canter</h6>
+                  <img src="img/tambahan gambar/safety tools (gambar yang ada dihapus aja) foto mobil2/k3 bag.jpg" alt="" />
+                  <h6>k3 Bag</h6>
                 </div>
               </div>
-              <div class="image-content" data-aos="fade-up"></div>
-              <div class="image-content" data-aos="fade-up"></div>
+              <div class="image-content" data-aos="fade-up">
+                <div class="image">
+                  <img src="img/tambahan gambar/safety tools (gambar yang ada dihapus aja) foto mobil2/Safety Cone.JPG" alt="" />
+                  <h6>Safety Cone</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/safety tools (gambar yang ada dihapus aja) foto mobil2/Safety Gloves Welder.JPG" alt="" />
+                  <h6>Safety Gloves Welder</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/safety tools (gambar yang ada dihapus aja) foto mobil2/safety Net.JPG" alt="" />
+                  <h6>safety Net</h6>
+                </div>
+              </div>
+              <div class="image-content" data-aos="fade-up">
+                <div class="image">
+                  <img src="img/tambahan gambar/safety tools (gambar yang ada dihapus aja) foto mobil2/Stick Lamp Lighter.JPG" alt="" />
+                  <h6>Stick Lamp Lighter</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/safety tools (gambar yang ada dihapus aja) foto mobil2/Welding Helmet.JPG" alt="" />
+                  <h6>Welding Helmet</h6>
+                </div>
+              </div>
             </div>
 
             <!-- surveyor tools  -->
             <div class="tab-pane fade" id="pills-surveyor" role="tabpanel" aria-labelledby="pills-surveyor-tab">
               <div class="content">
-                <h2>Hoist 2T</h2>
+                <h2>Surveyor ToolsT</h2>
                 <h4>15 unit</h4>
                 <h4>Total Station Topcon, Compass, Level Waterpass Topcon & HT</h4>
                 <p></p>
@@ -824,6 +937,30 @@
                 </div>
               </div>
               <div class="image-content" data-aos="fade-up"></div>
+            </div>
+
+            <!-- surveyor tools  -->
+            <div class="tab-pane fade" id="pills-Machine" role="tabpanel" aria-labelledby="pills-Machine-tab">
+              <div class="content">
+                <h2>Machine Tools</h2>
+                <!-- <h4>15 unit</h4> -->
+                <!-- <h4>Total Station Topcon, Compass, Level Waterpass Topcon & HT</h4> -->
+                <p></p>
+              </div>
+              <div class="image-content" data-aos="fade-up">
+                <div class="image">
+                  <img src="img/tambahan gambar/machine tools/Concrete Screed honda.JPG" alt="" />
+                  <h6>Concrete Screed honda</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/machine tools/grease pump machine tools.JPG" alt="" />
+                  <h6>grease pump machine tools</h6>
+                </div>
+                <div class="image">
+                  <img src="img/tambahan gambar/machine tools/hoice crane.JPG" alt="" />
+                  <h6>hoice crane</h6>
+                </div>
+              </div>
             </div>
           </div>
         </div>
