--- a/our-team.html
+++ b/our-team.html
@@ -283,7 +283,7 @@
             <div class="image-content">
               <span class="overlay"></span>
               <div class="card-image">
-                <img src="img/foto profile/male 1.jpg" alt="" class="card-img" />
+                <img src="img/foto profile/Foto Chandra.jpg" alt="" class="card-img" />
               </div>
             </div>
             <div class="card-content">
@@ -317,7 +317,7 @@
             <div class="image-content">
               <span class="overlay"></span>
               <div class="card-image">
-                <img src="img/foto profile/rexy.jpg" alt="" class="card-img" />
+                <img src="img/foto profile/foto rexy reinhart.jpg" alt="" class="card-img" />
               </div>
             </div>
             <div class="card-content">
@@ -471,7 +471,7 @@
             <div class="image-content">
               <span class="overlay"></span>
               <div class="card-image">
-                <img src="img/foto profile/rizal.jpg" alt="" class="card-img" />
+                <img src="img/foto profile/FOTO WEB RIZAL.jpg" alt="" class="card-img" />
               </div>
             </div>
             <div class="card-content">
@@ -686,7 +686,7 @@
       <a href="#">&times;</a>
       <div class="content-popup">
         <div class="left-popup">
-          <img src="img/foto profile/male 2.jpg" alt="" />
+          <img src="img/foto profile/Foto Chandra.jpg" alt="" />
         </div>
         <div class="pembatas"></div>
         <div class="right-popup">
@@ -726,7 +726,7 @@
       <a href="#">&times;</a>
       <div class="content-popup">
         <div class="left-popup">
-          <img src="img/foto profile/rexy.jpg" alt="" />
+          <img src="img/foto profile/foto rexy reinhart.jpg" alt="" />
         </div>
         <div class="pembatas"></div>
         <div class="right-popup">
@@ -872,7 +872,7 @@
       <a href="#">&times;</a>
       <div class="content-popup">
         <div class="left-popup">
-          <img src="img/foto profile/rizal.jpg" alt="" />
+          <img src="img/foto profile/FOTO WEB RIZAL.jpg" alt="" />
         </div>
         <div class="pembatas"></div>
         <div class="right-popup">
