--- a/project-TEL.html
+++ b/project-TEL.html
@@ -615,6 +615,7 @@
       </div>
       <div class="year">2021</div>
     </div>
+
     <!-- 2022-1 -->
     <div class="client-galery container mt-5">
       <div class="swiper mySwiper">
@@ -692,7 +693,55 @@
         <div class="paragraf1">Partially replacement existing asphalt & base course with new basecourse 200 thicknes</div>
       </div>
     </div>
-
+    <!-- 2023-1 -->
+    <div class="client-galery container mt-5">
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <video src="img/project/ Pulp And Paper/2023-ONSTRUCT TOP CLOSURE OF EXISTING LANDFILL/2.mp4" controls></video>
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2023-ONSTRUCT TOP CLOSURE OF EXISTING LANDFILL/1.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2023-ONSTRUCT TOP CLOSURE OF EXISTING LANDFILL/2.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2023-ONSTRUCT TOP CLOSURE OF EXISTING LANDFILL/3.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2023-ONSTRUCT TOP CLOSURE OF EXISTING LANDFILL/4.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2023-ONSTRUCT TOP CLOSURE OF EXISTING LANDFILL/5.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2023-ONSTRUCT TOP CLOSURE OF EXISTING LANDFILL/6.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2023-ONSTRUCT TOP CLOSURE OF EXISTING LANDFILL/7.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2023-ONSTRUCT TOP CLOSURE OF EXISTING LANDFILL/8.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2023-ONSTRUCT TOP CLOSURE OF EXISTING LANDFILL/9.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/project/ Pulp And Paper/2023-ONSTRUCT TOP CLOSURE OF EXISTING LANDFILL/10.svg" alt="" />
+          </div>
+        </div>
+        <div class="swiper-button-next swiper-navBtn"></div>
+        <div class="swiper-button-prev swiper-navBtn"></div>
+        <div class="bullet-roll swiper-pagination"></div>
+      </div>
+    </div>
+    <div class="project-collection container mb-5">
+      <div class="project">
+        <div class="paragraf1">CONSTRUCT TOP CLOSURE OF EXISTING LANDFILL #5(Palembang)</div>
+      </div>
+      <div class="year">2023</div>
+    </div>
     <!-- footer -->
     <section>
       <div class="parallax banner-footer" id="contact-us">
